# mkvtag

./: .gitignore  Dockerfile  LICENSE  README.md  docker_build.sh  entrypoint.sh  mkvtag.code-workspace  pyproject.toml
mkvtag/: args.py  constants.py  file.py  run.py  tagger.py  typ.py  utils.py
tests/: conftest.py  mkvtag-test-bad.json  test_run.py  tests.py
tests/fixtures_generated/: mkvtag.json
tests/fixtures_rename/: mkvtag.json
