[tool.poetry]
name = "mkvtag"
version = "0.0.1"
description = "A small dockerized python app that watches a dir and runs \"mkvpropedit --add-track-statistics-tags\" on new files."
authors = ["Brandon Shelley <brandon@pacificaviator.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
watchdog = "^4.0.1"
humanize = "^4.9.0"

deepdiff = "^7.0.1"
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mkvtag = "mkvtag.run:main"

[tool.black]
target-version = ['py312']
preview = true

[tool.isort]
profile = "black"
order_by_type = false
combine_as_imports = true
case_sensitive = false
force_sort_within_sections = false

[tool.pyright]
pythonVersion = "3.12"
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4
preview = true

[tool.ruff.lint]
fixable = ["ALL"]
select = [
  # PRAGMA: F401 is for unused imports, you may want to remove this when developing so you can comment/uncomment code.
  "F401",
  "W292",
  "W293",
  "W191",
  "E101",
  "E112",
  "E117",
  "I002",
  "UP035",
]
# To add, when supported by ruff: "W503", "E203"
# see: https://github.com/astral-sh/ruff/issues/2402

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.lint.isort]
force-sort-within-sections = false
case-sensitive = false
combine-as-imports = true
force-wrap-aliases = true
order-by-type = false

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
quote-style = "double"
